Changed environment to work off the requirements.txt file. updated main.py to test the environment install with numpy
 Changes to be committed:
	modified:   .gitignore
	deleted:    environment.txt
	modified:   environment.yml
	modified:   requirements.txt
	modified:   src/main.py

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ __pycache__/
 .build/
 .venv/
 venv/
+enduro_env/
+.venv311
 
 # Conda / envs (if you ever place env here—usually not recommended)
 env/
