--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,5 +1,6 @@
 { "global": {
-    "GNSS_SEARCH_RATE": 2 # in seconds, minimum 1
+    "GNSS_SEARCH_RATE": 2, # rate that we get GNSS readings in seconds, minimum 1
+    "GNSS_SEND_BATCH_SIZE": 5 # number of GNSS readings to send in one batch
   },
   "mode": "lora", # Options: "lora", "cellular", "dual"
   "gnss_hz": 0.5,
