--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,6 +1,8 @@
 { "global": {
     "GNSS_SEARCH_RATE": 2, # rate that we get GNSS readings in seconds, minimum 1
-    "GNSS_SEND_BATCH_SIZE": 5 # number of GNSS readings to send in one batch
+    "GNSS_SEND_BATCH_SIZE": 5, # number of GNSS readings to send in one batch
+    "SEND_COMPACT": True, # whether to send compact JSON
+    "TRANSMIT_MODE": "cellular", # Options: "lora", "cellular", "dual"
   },
   "mode": "lora", # Options: "lora", "cellular", "dual"
   "gnss_hz": 0.5,
