Upload over wifi to WebApp is completed and tested locally
On branch Upload_Webapp
Changes to be committed:
	modified:   configs/config.yaml
	new file:   some_notes.txt
	modified:   src/cellular.py
	modified:   src/gps.py
	modified:   src/main.py
	modified:   src/test_gps.py

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -3,6 +3,7 @@
     "GNSS_SEND_BATCH_SIZE": 5, # number of GNSS readings to send in one batch
     "SEND_COMPACT": True, # whether to send compact JSON
     "TRANSMIT_MODE": "cellular", # Options: "lora", "cellular", "dual"
+    "PI_ID": "pi001" # unique ID for the tracker
   },
   "mode": "lora", # Options: "lora", "cellular", "dual"
   "gnss_hz": 0.5,
